<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/b2"
    android:id="@+id/main1"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:animateLayoutChanges="true">
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="7dp"
    android:orientation="vertical">
    <TextView
        android:text="Astro-Talk"
        android:layout_marginTop="5dp"
        style="@style/Event_Heading">
    </TextView>
    <TextView
        android:id="@+id/eventviewdes1"
        android:text="@string/astrotalkdes"
        android:layout_marginTop="10dp"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:text="@string/astrotalksp1"
        style="@style/Event_Special_Text">
    </TextView>
    <TextView
        android:text="@string/astrotalksp1des1"
        android:id="@+id/eventviewdes2"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:id="@+id/astrotalklink1"
        android:text="@string/astrotalksp1link1"
        android:clickable="true"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:text="@string/astrotalksp1des2"
        android:id="@+id/eventviewdes3"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:id="@+id/astrotalklink2"
        android:text="@string/astrotalksp1link2"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:text="@string/astrotalksp2"
        style="@style/Event_Special_Text">
    </TextView>
    <TextView
        android:text="@string/astrotalksp2des1"
        android:id="@+id/eventviewdes4"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:text="@string/astrotalkt1"
        android:id="@+id/eventviewdes5"
        style="@style/Event_des">
    </TextView>
</LinearLayout>
</ScrollView>
</LinearLayout>