<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/b2"
    android:id="@+id/main1"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:animateLayoutChanges="true">
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="7dp"
    android:orientation="vertical">
    	<TextView
        android:text="Beyond Earth"
        android:layout_marginTop="5dp"
        style="@style/Event_Heading">
    </TextView>
    <TextView
        android:text="@string/beyondearthdes"
        android:id="@+id/eventviewdes1"
        android:layout_marginTop="10dp"
        style="@style/Event_des">
    </TextView>
    <TextView
        android:text="@string/beyondearthsp1"
        style="@style/Event_Special_Text">
    </TextView>
    <TextView
        android:text="@string/beyondearthdp1des"
        android:id="@+id/eventviewdes2"
        android:layout_marginTop="5dp"
        style="@style/Event_des">
    </TextView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
